# ergocub-gaze-control

./: .gitignore  3d_visualizer.py  CMakeLists.txt  README.md  config.ini  ecub_config.ini  ecub_fixed_config.ini  icub_config.ini  start.sh  stop.sh  visualize.py
config/: ecub_config.ini  ecub_docker_config.ini  ecub_fixed_config.ini  ecubsim_config.ini  icub2.ini  icub2_control_parameters.ini  icub2_joint_configurations.ini
gazebo/: CMakeLists.txt
gazebo/worlds/: ergocub_grasp_demo.sdf  icub2_grasp_demo.sdf
include/: CartesianTrajectory.cpp  CartesianTrajectory.h  GazeControl.cpp  GazeControl.h  JointInterface.cpp  JointInterface.h  Payload.cpp  Payload.h  PositionControl.cpp  PositionControl.h  QPSolver.cpp  QPSolver.h  RPCServerInterface.cpp  RPCServerInterface.h  ergoCub.cpp  ergoCub.h  ergoCubConfigurations.h  iCub2.cpp  iCub2.h  iCub2Configurations.h  iCubBase.cpp  iCubBase.h
interface/: CMakeLists.txt  gaze-controller.thrift
src/: ergocub_grasp_demo.cpp  grasp-demo.cpp  icub2_grasp_demo.cpp  main.cpp  qp_test.cpp  server.cpp  test.cpp  test_build.cpp
